--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ img.icon {
 .split-img {
   width: 50%;
   height: 95vh;
-  background-image: url(../image/main.jpg);
+  background-image: url(../image/main.JPG);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -471,7 +471,7 @@ img.icon {
     width: 100%;
     height: 67vh;
     margin-bottom: 20px;
-    background-image: url(../image/main.jpg);
+    background-image: url(../image/main.JPG);
   }
 
   .split-title {
